package gameLaby.laby;

/**
 * Représente un élément du labyrinthe pouvant se faire attaquer
 */
public interface Victime {

   void subirDegats(int degats);

}
